[metadata]
name = tobiko
summary = OpenStack Testing Upgrades Library
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://tobiko.readthedocs.io/
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

keywords =
    setup
    distutils

[files]
packages =
    tobiko

[entry_points]
console_scripts =
    tobiko = tobiko.cmd:main
    tobiko-fixture = tobiko.cmd.fixture:main
    tobiko-keystone-credentials = tobiko.openstack.keystone._credentials:print_credentials
tobiko.cli_commands =
    ping = tobiko.cmd:TobikoPing
    http_ping = tobiko.cmd:TobikoHttpPing
oslo.config.opts =
    tobiko = tobiko.config:list_tobiko_options

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[tool:pytest]
render_collapsed = True
